# LoopGym

./: .gitignore  CONTRIBUTING.md  LICENSE  PLAN.md  PUBLISHING.md  README.md  SECURITY.md  STATUS.md  SYNC.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: api.md
envs/loopbench/code-repair-v1/: tasks.json
envs/loopbench/composed-swarm-v1/: spec.yaml  tasks.json
envs/loopbench/hitl-gate-v1/: spec.yaml  tasks.json
envs/loopbench/multi-agent-debate-v1/: spec.yaml
envs/loopbench/rag-retrieval-v1/: spec.yaml
envs/loopbench/research-synthesis-v1/: tasks.json
envs/loopbench/safety-constrained-v1/: spec.yaml  tasks.json
examples/: minimal-loop.yaml  quickstart.py
loopgym/: __init__.py  cli.py  registry.py  trace.py
loopgym/envs/: __init__.py  base.py  composed.py  live.py  perturbed_sim.py  replay.py  sim.py
loopgym/envs/loopbench/code-repair-v1/: spec.yaml
loopgym/envs/loopbench/hitl-gate-v1/: spec.yaml  tasks.json
loopgym/envs/loopbench/multi-agent-debate-v1/: tasks.json
loopgym/envs/loopbench/rag-retrieval-v1/: spec.yaml  tasks.json
loopgym/envs/loopbench/research-synthesis-v1/: spec.yaml
loopgym/envs/loopbench/safety-constrained-v1/: spec.yaml  tasks.json
loopgym/evaluators/: __init__.py  deterministic.py  rubric.py
loopgym/export/: __init__.py  les.py  loopnet.py
loopgym/runtime/: __init__.py  compiler.py  loop_runtime.py
tests/: test_export_loopnet.py  test_replay_env.py  test_sim_env.py
tests/fixtures/: captured-record.jsonl
