[project]
name = "loopgym"
version = "0.1.3"
description = "OpenAI Gym equivalent for loops — create, run, benchmark, compare, evolve"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Kanak Malpani" }]
keywords = ["loop-engineering", "loopgym", "agents", "reinforcement-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/KanakMalpani/LoopGym"
Repository = "https://github.com/KanakMalpani/LoopGym"
Issues = "https://github.com/KanakMalpani/LoopGym/issues"
Documentation = "https://github.com/KanakMalpani/LoopGym/blob/main/docs/api.md"
"Loop Core Engineering" = "https://github.com/KanakMalpani/Loop-Core-Engineering"

# Spec pin: LSS 1.0 (lss@1.0.0) — validate env YAML against Loop Core Engineering
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
loopgym = "loopgym.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loopgym"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
